--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -55,7 +55,7 @@ jobs:
       - name: "Code increment #1"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter1' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter2' ||
           github.head_ref == 'iter3' ||
           github.head_ref == 'iter4' ||
