--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -56,29 +56,29 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'iter2' ||
-          github.head_ref == 'iter3' ||
-          github.head_ref == 'iter4' ||
-          github.head_ref == 'iter5' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14' ||
-          github.head_ref == 'iter15' ||
-          github.head_ref == 'iter16' ||
-          github.head_ref == 'iter17' ||
-          github.head_ref == 'iter18' ||
-          github.head_ref == 'iter19' ||
-          github.head_ref == 'iter20' ||
-          github.head_ref == 'iter21' ||
-          github.head_ref == 'iter22' ||
-          github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration1$ \
               -binary-path=cmd/shortener/shortener
@@ -86,84 +86,84 @@ jobs:
       - name: "Code increment #2"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter2' ||
-          github.head_ref == 'iter3' ||
-          github.head_ref == 'iter4' ||
-          github.head_ref == 'iter5' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14' ||
-          github.head_ref == 'iter15' ||
-          github.head_ref == 'iter16' ||
-          github.head_ref == 'iter17' ||
-          github.head_ref == 'iter18' ||
-          github.head_ref == 'iter19' ||
-          github.head_ref == 'iter20' ||
-          github.head_ref == 'iter21' ||
-          github.head_ref == 'iter22' ||
-          github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration2$ -source-path=.
 
       - name: "Code increment #3"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter3' ||
-          github.head_ref == 'iter4' ||
-          github.head_ref == 'iter5' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14' ||
-          github.head_ref == 'iter15' ||
-          github.head_ref == 'iter16' ||
-          github.head_ref == 'iter17' ||
-          github.head_ref == 'iter18' ||
-          github.head_ref == 'iter19' ||
-          github.head_ref == 'iter20' ||
-          github.head_ref == 'iter21' ||
-          github.head_ref == 'iter22' ||
-          github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration3$ -source-path=.
 
       - name: "Code increment #4"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter4' ||
-          github.head_ref == 'iter5' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14' ||
-          github.head_ref == 'iter15' ||
-          github.head_ref == 'iter16' ||
-          github.head_ref == 'iter17' ||
-          github.head_ref == 'iter18' ||
-          github.head_ref == 'iter19' ||
-          github.head_ref == 'iter20' ||
-          github.head_ref == 'iter21' ||
-          github.head_ref == 'iter22' ||
-          github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref'
         run: |
           SERVER_PORT=$(random unused-port)
           shortenertestbeta -test.v -test.run=^TestIteration4$ \
@@ -173,26 +173,26 @@ jobs:
       - name: "Code increment #5"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter5' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14' ||
-          github.head_ref == 'iter15' ||
-          github.head_ref == 'iter16' ||
-          github.head_ref == 'iter17' ||
-          github.head_ref == 'iter18' ||
-          github.head_ref == 'iter19' ||
-          github.head_ref == 'iter20' ||
-          github.head_ref == 'iter21' ||
-          github.head_ref == 'iter22' ||
-          github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref'
         run: |
           SERVER_PORT=$(random unused-port)
           shortenertestbeta -test.v -test.run=^TestIteration5$ \
@@ -202,25 +202,25 @@ jobs:
       - name: "Code increment #6"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter6' ||
-          github.head_ref == 'iter7' ||
-          github.head_ref == 'iter8' ||
-          github.head_ref == 'iter9' ||
-          github.head_ref == 'iter10' ||
-          github.head_ref == 'iter11' ||
-          github.head_ref == 'iter12' ||
-          github.head_ref == 'iter13' ||
-          github.head_ref == 'iter14' ||
-          github.head_ref == 'iter15' ||
-          github.head_ref == 'iter16' ||
-          github.head_ref == 'iter17' ||
-          github.head_ref == 'iter18' ||
-          github.head_ref == 'iter19' ||
-          github.head_ref == 'iter20' ||
-          github.head_ref == 'iter21' ||
-          github.head_ref == 'iter22' ||
-          github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref' ||
+          github.head_ref == 'ref'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration6$ \
               -source-path=.
