--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
 
+
   shortenertest:
     runs-on: ubuntu-latest
     container: golang:1.19
@@ -56,29 +57,29 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' 
+          github.head_ref == 'iter2' ||
+          github.head_ref == 'iter3' ||
+          github.head_ref == 'iter4' ||
+          github.head_ref == 'iter5' ||
+          github.head_ref == 'iter6' ||
+          github.head_ref == 'iter7' ||
+          github.head_ref == 'iter8' ||
+          github.head_ref == 'iter9' ||
+          github.head_ref == 'iter10' ||
+          github.head_ref == 'iter11' ||
+          github.head_ref == 'iter12' ||
+          github.head_ref == 'iter13' ||
+          github.head_ref == 'iter14' ||
+          github.head_ref == 'iter15' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration1$ \
               -binary-path=cmd/shortener/shortener
@@ -87,28 +88,28 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref'
+          github.head_ref == 'iter3' ||
+          github.head_ref == 'iter4' ||
+          github.head_ref == 'iter5' ||
+          github.head_ref == 'iter6' ||
+          github.head_ref == 'iter7' ||
+          github.head_ref == 'iter8' ||
+          github.head_ref == 'iter9' ||
+          github.head_ref == 'iter10' ||
+          github.head_ref == 'iter11' ||
+          github.head_ref == 'iter12' ||
+          github.head_ref == 'iter13' ||
+          github.head_ref == 'iter14' ||
+          github.head_ref == 'iter15' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration2$ -source-path=.
 
@@ -116,27 +117,27 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref'
+          github.head_ref == 'iter4' ||
+          github.head_ref == 'iter5' ||
+          github.head_ref == 'iter6' ||
+          github.head_ref == 'iter7' ||
+          github.head_ref == 'iter8' ||
+          github.head_ref == 'iter9' ||
+          github.head_ref == 'iter10' ||
+          github.head_ref == 'iter11' ||
+          github.head_ref == 'iter12' ||
+          github.head_ref == 'iter13' ||
+          github.head_ref == 'iter14' ||
+          github.head_ref == 'iter15' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration3$ -source-path=.
 
@@ -144,26 +145,26 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref'
+          github.head_ref == 'iter5' ||
+          github.head_ref == 'iter6' ||
+          github.head_ref == 'iter7' ||
+          github.head_ref == 'iter8' ||
+          github.head_ref == 'iter9' ||
+          github.head_ref == 'iter10' ||
+          github.head_ref == 'iter11' ||
+          github.head_ref == 'iter12' ||
+          github.head_ref == 'iter13' ||
+          github.head_ref == 'iter14' ||
+          github.head_ref == 'iter15' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
         run: |
           SERVER_PORT=$(random unused-port)
           shortenertestbeta -test.v -test.run=^TestIteration4$ \
@@ -174,25 +175,25 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref'
+          github.head_ref == 'iter6' ||
+          github.head_ref == 'iter7' ||
+          github.head_ref == 'iter8' ||
+          github.head_ref == 'iter9' ||
+          github.head_ref == 'iter10' ||
+          github.head_ref == 'iter11' ||
+          github.head_ref == 'iter12' ||
+          github.head_ref == 'iter13' ||
+          github.head_ref == 'iter14' ||
+          github.head_ref == 'iter15' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
         run: |
           SERVER_PORT=$(random unused-port)
           shortenertestbeta -test.v -test.run=^TestIteration5$ \
@@ -203,24 +204,24 @@ jobs:
         if: |
           github.ref == 'refs/heads/main' ||
           github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref' ||
-          github.head_ref == 'ref'
+          github.head_ref == 'iter7' ||
+          github.head_ref == 'iter8' ||
+          github.head_ref == 'iter9' ||
+          github.head_ref == 'iter10' ||
+          github.head_ref == 'iter11' ||
+          github.head_ref == 'iter12' ||
+          github.head_ref == 'iter13' ||
+          github.head_ref == 'iter14' ||
+          github.head_ref == 'iter15' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration6$ \
               -source-path=.
