--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -229,7 +229,7 @@ jobs:
       - name: "Code increment #7"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter7' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter8' ||
           github.head_ref == 'iter9' ||
           github.head_ref == 'iter10' ||
@@ -255,7 +255,7 @@ jobs:
       - name: "Code increment #8"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter8' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter9' ||
           github.head_ref == 'iter10' ||
           github.head_ref == 'iter11' ||
@@ -279,7 +279,7 @@ jobs:
       - name: "Code increment #9"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter9' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter10' ||
           github.head_ref == 'iter11' ||
           github.head_ref == 'iter12' ||
@@ -305,7 +305,7 @@ jobs:
       - name: "Code increment #10"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter10' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter11' ||
           github.head_ref == 'iter12' ||
           github.head_ref == 'iter13' ||
@@ -329,7 +329,7 @@ jobs:
       - name: "Code increment #11"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter11' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter12' ||
           github.head_ref == 'iter13' ||
           github.head_ref == 'iter14' ||
@@ -351,7 +351,7 @@ jobs:
       - name: "Code increment #12"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter12' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter13' ||
           github.head_ref == 'iter14' ||
           github.head_ref == 'iter15' ||
@@ -372,7 +372,7 @@ jobs:
       - name: "Code increment #13"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter13' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter14' ||
           github.head_ref == 'iter15' ||
           github.head_ref == 'iter16' ||
@@ -392,7 +392,7 @@ jobs:
       - name: "Code increment #14"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter14' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter15' ||
           github.head_ref == 'iter16' ||
           github.head_ref == 'iter17' ||
@@ -411,7 +411,7 @@ jobs:
       - name: "Code increment #15"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'iter15' ||
+          github.head_ref == 'ref' ||
           github.head_ref == 'iter16' ||
           github.head_ref == 'iter17' ||
           github.head_ref == 'iter18' ||
