--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -8,10 +8,18 @@ on:
 
 jobs:
 
+  branchtest:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check branch name
+        run: |
+          if [[ ! $GITHUB_HEAD_REF =~ ^iter[0-9]+$ ]]; then echo "Branch name must match pattern 'iter<number>'" && exit 1; fi
 
   shortenertest:
     runs-on: ubuntu-latest
     container: golang:1.19
+    needs: branchtest
 
     services:
       postgres:
@@ -56,7 +64,7 @@ jobs:
       - name: "Code increment #1"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter1' ||
           github.head_ref == 'iter2' ||
           github.head_ref == 'iter3' ||
           github.head_ref == 'iter4' ||
@@ -87,7 +95,7 @@ jobs:
       - name: "Code increment #2"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter2' ||
           github.head_ref == 'iter3' ||
           github.head_ref == 'iter4' ||
           github.head_ref == 'iter5' ||
@@ -116,7 +124,7 @@ jobs:
       - name: "Code increment #3"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter3' ||
           github.head_ref == 'iter4' ||
           github.head_ref == 'iter5' ||
           github.head_ref == 'iter6' ||
@@ -144,7 +152,7 @@ jobs:
       - name: "Code increment #4"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter4' ||
           github.head_ref == 'iter5' ||
           github.head_ref == 'iter6' ||
           github.head_ref == 'iter7' ||
@@ -174,7 +182,7 @@ jobs:
       - name: "Code increment #5"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter5' ||
           github.head_ref == 'iter6' ||
           github.head_ref == 'iter7' ||
           github.head_ref == 'iter8' ||
@@ -203,7 +211,7 @@ jobs:
       - name: "Code increment #6"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter6' ||
           github.head_ref == 'iter7' ||
           github.head_ref == 'iter8' ||
           github.head_ref == 'iter9' ||
@@ -229,7 +237,7 @@ jobs:
       - name: "Code increment #7"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter7' ||
           github.head_ref == 'iter8' ||
           github.head_ref == 'iter9' ||
           github.head_ref == 'iter10' ||
@@ -255,7 +263,7 @@ jobs:
       - name: "Code increment #8"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter8' ||
           github.head_ref == 'iter9' ||
           github.head_ref == 'iter10' ||
           github.head_ref == 'iter11' ||
@@ -279,7 +287,7 @@ jobs:
       - name: "Code increment #9"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter9' ||
           github.head_ref == 'iter10' ||
           github.head_ref == 'iter11' ||
           github.head_ref == 'iter12' ||
@@ -305,7 +313,7 @@ jobs:
       - name: "Code increment #10"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter10' ||
           github.head_ref == 'iter11' ||
           github.head_ref == 'iter12' ||
           github.head_ref == 'iter13' ||
@@ -329,7 +337,7 @@ jobs:
       - name: "Code increment #11"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter11' ||
           github.head_ref == 'iter12' ||
           github.head_ref == 'iter13' ||
           github.head_ref == 'iter14' ||
@@ -351,7 +359,7 @@ jobs:
       - name: "Code increment #12"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter12' ||
           github.head_ref == 'iter13' ||
           github.head_ref == 'iter14' ||
           github.head_ref == 'iter15' ||
@@ -372,7 +380,7 @@ jobs:
       - name: "Code increment #13"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter13' ||
           github.head_ref == 'iter14' ||
           github.head_ref == 'iter15' ||
           github.head_ref == 'iter16' ||
@@ -392,7 +400,7 @@ jobs:
       - name: "Code increment #14"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter14' ||
           github.head_ref == 'iter15' ||
           github.head_ref == 'iter16' ||
           github.head_ref == 'iter17' ||
@@ -411,7 +419,7 @@ jobs:
       - name: "Code increment #15"
         if: |
           github.ref == 'refs/heads/main' ||
-          github.head_ref == 'ref' ||
+          github.head_ref == 'iter15' ||
           github.head_ref == 'iter16' ||
           github.head_ref == 'iter17' ||
           github.head_ref == 'iter18' ||
@@ -425,3 +433,48 @@ jobs:
           shortenertestbeta -test.v -test.run=^TestIteration15$ \
               -binary-path=cmd/shortener/shortener \
               -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
+
+      - name: "Code increment #16"
+        if: |
+          github.ref == 'refs/heads/main' ||
+          github.head_ref == 'iter16' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
+        run: |
+          shortenertestbeta -test.v -test.run=^TestIteration16$ \
+              -source-path=. \
+
+      - name: "Code increment #17"
+        if: |
+          github.ref == 'refs/heads/main' ||
+          github.head_ref == 'iter17' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
+        run: |
+          shortenertestbeta -test.v -test.run=^TestIteration17$ \
+              -source-path=. \
+
+      - name: "Code increment #18"
+        if: |
+          github.ref == 'refs/heads/main' ||
+          github.head_ref == 'iter18' ||
+          github.head_ref == 'iter19' ||
+          github.head_ref == 'iter20' ||
+          github.head_ref == 'iter21' ||
+          github.head_ref == 'iter22' ||
+          github.head_ref == 'iter23' ||
+          github.head_ref == 'iter24'
+        run: |
+          shortenertestbeta -test.v -test.run=^TestIteration18$ \
+              -source-path=. \
