--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "base_url": "http://localhost:8080/", 
     "file_storage_path": "",
     "database_dsn": "", 
-    "enable_https": true    
+    "enable_https": false   
 }
