feat: added stats handler

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "base_url": "http://localhost:8080/", 
     "file_storage_path": "",
     "database_dsn": "", 
-    "enable_https": false   
+    "enable_https": false,
+    "trusted_subnet": "127.0.0.1"
 }
